--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
   <title>Raycasting</title>
+  
+  <link rel="stylesheet" href="style.css">
 
   <script src="scripts/boundary.js"></script>
   <script src="scripts/vector.js"></script>
